# ai-manhwa-generator

./: .env.example  .gitignore  README.md  assembler.py  asset_factory.py  compiler.py  config.py  daily_episode.py  email_notifier.py  generators.py  google_publisher.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  run_live.py  schedule_existing_series.py  series_state.json  state_manager.py  story_generator.py  subtitle_generator.py  test_edge_voices.py  test_pipeline.py  update_scheduled_titles.py  upload_current_series.py  upload_to_drive.py  youtube_metadata.py
assets/ep_test_series_1/: subtitles.ass  transcription.json
core/: types.py
core/audio/: base.py  edge_tts.py  gemini_tts.py
core/image/: base.py  runware.py
core/llm/: base.py  gemini.py
core/story/: __init__.py  bible_generator.py  chapter_planner.py  chapter_writer.py  episode_planner.py  episode_writer.py  models.py  prompts.py
