[project]
name = "ai-manhwa-generator"
version = "0.1.0"
description = "An automated pipeline for generating Manhwa-style videos using AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "fastapi>=0.136.1",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
    "whisper-timestamped>=1.15.9",
]

[project.scripts]
start = "uvicorn main:app --reload"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "ARG", "PTH"]
ignore = []

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "ruff>=0.15.12",
]
